<resources>
    <string name="app_name">Warhammer 40k Cards</string>
    <string name="action_settings">Settings</string>
    <string name="game_settings">Games</string>
    <string name="psychers_warlord_traits_and_bonuses">Psychers, Warlord Traits, and Bonuses</string>
    <string name="maelstorm_deck">Maelstorm Deck</string>
    <string name="set_maelstrom_deck">Set Maelstrom Deck</string>
    <string name="psychic_decks">Set Psychic Decks</string>
    <string name="setDecks">Set Decks</string>
    <string name="title_activity_pwtab">pwtab</string>
    <string name="title_activity_md">md</string>
    <string name="title_activity_mcd">mcd</string>
    <string name="title_activity_pd">pd</string>
    <string name="create_maelstrom">Create Maelstrom Deck</string>
    <string name="modify_a_deck">Modify A Deck</string>
    <string name="stuff">Delete A Deck</string>
    <string name="title_activity_new_deck">NewDeck</string>
    <string name="title_activity_mod_deck">ModDeck</string>
    <string name="title_activity_delete_deck">DeleteDeck</string>
    <string name="create_a_new_deck">Create A New Deck</string>
    <string name="enter_the_number_of_cards">Enter the number of cards: </string>
    <string name="_36_std">36 std</string>
    <string name="maelstrom_deck_title">Maelstrom Deck Title</string>
    <string name="maeltrom_deck_title">Maeltrom Deck Title</string>
    <string name="save">Save</string>
    <string name="autocount">Autocount</string>
    <string name="card_start_number">Card Start Number (11 std)</string>
    <string name="cards_per_10_6_std">cards per 10 (6 std)</string>
    <string name="card_number">Card Number:</string>
    <string name="next">NEXT</string>
    <string name="last">LAST</string>
    <string name="enter_card_details_here">Enter Card Details Here</string>
    <string name="of">of</string>
    <string name="delete_a_deck">Delete A Deck</string>
    <string name="delete">DELETE</string>
    <string name="list_of_decks">LIST OF DECKS</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="go_back">GO BACK</string>
    <string name="modify_a_deck2">Modify A Deck</string>
    <string name="modify">MODIFY</string>
    <string name="get_card_by_card_number">Get card by Card Number</string>
    <string name="get_card_by_serial_number">Get card by Serial Number</string>
    <string name="list_of_cards">List of Cards</string>
    <string name="_00">00</string>
    <string name="card_number2">Card Number:</string>
    <string name="serial_number1">Serial Number:</string>
    <string-array name="cardsPerTen"><item>1</item><item>2</item><item>3</item>
        <item>4</item><item>5</item><item>6</item><item>7</item>
        <item>8</item><item>9</item>
    </string-array>
</resources>
