<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_new_deck"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.warhammer40kcards.NewDeck"
    tools:showIn="@layout/activity_new_deck">



    <TextView
        android:text="@string/enter_the_number_of_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numCards"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/blackText"
        android:visibility="visible"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/numCards"
        android:layout_alignBottom="@id/numCards"
        android:layout_marginLeft="15sp"
        android:layout_marginStart="15sp"
        android:layout_toRightOf="@id/numCards"
        android:layout_toEndOf="@id/numCards"
        android:id="@+id/numCardsOutput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/backgroundButton"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/_36_std"
        android:textAlignment="center"
        android:visibility="visible"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numCards"
        android:id="@+id/deckTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/backgroundButton"
        android:textSize="30sp"
        android:hint="@string/maeltrom_deck_title"
        android:textAlignment="center"
        android:layout_marginTop="10sp"
        android:visibility="visible"/>

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/savebutton"
        android:visibility="visible"
        android:onClick="saveButton"/>

    <CheckBox
        android:text="@string/autocount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deckTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10sp"
        android:id="@+id/isAutoCount"
        android:checked="false"
        android:visibility="visible"/>

    <Spinner
        android:layout_width="100sp"
        android:layout_height="20sp"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/isAutoCount"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10sp"
        android:id="@+id/radix"
        android:visibility="invisible"
        android:background="@color/backgroundButton"/>

    <TextView
        android:text="@string/cards_per_10_6_std"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/radix"
        android:layout_alignBottom="@+id/radix"
        android:layout_toLeftOf="@+id/radix"
        android:layout_toStartOf="@+id/radix"
        android:id="@+id/radixCount"
        android:visibility="invisible"
        android:textColor="@color/blackText"
        android:background="@color/backgroundButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/isAutoCount"
        android:layout_alignBottom="@id/isAutoCount"
        android:layout_alignLeft="@id/radixCount"
        android:layout_alignStart="@id/radixCount"
        android:id="@+id/cardStart"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/backgroundButton"
        android:hint="@string/card_start_number"
        android:textAlignment="center"
        android:layout_marginTop="10sp"
        android:visibility="invisible"
        android:inputType="number"/>

</RelativeLayout>