<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_mod_deck"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.warhammer40kcards.ModDeck"
    tools:showIn="@layout/activity_mod_deck">

    <Button
        android:text="@string/modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/delete"
        android:visibility="visible"
        android:background="@color/backgroundButton"
        android:textColor="@color/blackText"
        android:onClick="deleteClick"/>

    <RelativeLayout
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/cL"
        android:visibility="invisible"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="20sp"
        android:id="@+id/listOFiles"
        android:layout_above="@id/delete"
        android:visibility="visible"
        android:background="@color/backgroundButton" />

    <TextView
        android:text="@string/list_of_decks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/listOFiles"
        android:id="@+id/decks"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:textSize="20sp"
        android:textColor="@color/blackText"/>

    <Button
        android:text="@string/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/delete"
        android:id="@+id/goBack"
        android:background="@color/backgroundButton"
        android:textColor="@color/blackText"
        android:layout_marginTop="20sp"
        android:onClick="goBackClick"/>


</RelativeLayout>
